--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 button {
     padding: 15px 30px;
     font-size: 1em;
-    background-color: #3498db;
+    background-color: #006400;
     color: white;
     border: none;
     border-radius: 8px;
@@ -31,7 +31,7 @@ button {
 }
 
 button:hover {
-    background-color: #2980b9;
+    background-color: #006400;
 }
 
 
@@ -116,11 +116,11 @@ li {
 
 
 .detail-block {
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
 .label {
-  font-size: 7px;
+  font-size: 9px;
   color: #666;
 }
 
