--- a/style.css
+++ b/style.css
@@ -189,3 +189,12 @@ li {
   height: 70px;
   object-fit: cover;
 }
+
+
+.instrument-left img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    display: block;
+}
+
