--- a/style.css
+++ b/style.css
@@ -185,8 +185,16 @@ li {
 
 
 .instrument-left img {
-    width: 50px;
+    width: 60px;
     height: 50px;
+    object-fit: cover;
+    display: block;
+}
+
+/* 自分で追加 */
+.instrument-detail img {
+    width: 120px;
+    height: 100px;
     object-fit: cover;
     display: block;
 }
