--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ button:hover {
   flex: 1;
   margin: 0 5px;
   padding: 10px;
+  font-size: 15px;
 }
 
 /* 一般 */
@@ -179,15 +180,22 @@ li {
   justify-content: space-between;
 }
 
-.instrument-info {
+.instrument-infoA {
+  display: flex;
+  flex-direction: column;
+      font-size: 14px;
+}
+
+.instrument-infoB {
   display: flex;
   flex-direction: column;
       font-size: 12px;
 }
 
+
 #instrumentList img {
-  width: 80px;
-  height: 70px;
+  width: 70px;
+  height: 60px;
   object-fit: cover;
 }
 
@@ -201,8 +209,8 @@ li {
 
 /* 自分で追加 */
 .instrument-detail img {
-    width: 120px;
-    height: 100px;
+    width: 300px;
+    height: 270px;
     object-fit: cover;
     display: block;
 }
@@ -212,6 +220,7 @@ li {
   align-items: center;
   gap: 10px;
   flex: 1;
+ font-size: 10px;
 }
 
 
