--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ li {
   border-bottom: 1px solid #ccc;
   padding: 10px;
   cursor: pointer;
+  font-size: 14px;
 }
 .col {
   padding: 0 5px;
@@ -210,7 +211,7 @@ li {
 /* 自分で追加 */
 .instrument-detail img {
     width: 300px;
-    height: 270px;
+    height: 250px;
     object-fit: cover;
     display: block;
 }
